[package]
name = "peer-2-peer"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Peer-to-peer networking using iroh, irpc, and iroh-gossip"

[dependencies]
# irpc for type-safe RPC
irpc = { workspace = true }
irpc-iroh = "0.11.0"

# Setlist types
setlist = { path = "../fts/setlist" }

# Iroh P2P networking library (with local discovery feature)
iroh = { version = "0.95", features = ["discovery-local-network"] }

# iroh-gossip for broadcasting state changes
iroh-gossip = "0.95.0"

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1", features = ["alloc", "use-std"] }
hex = "0.4"

# Local socket IPC (cross-platform: Unix domain sockets + Windows named pipes)
interprocess = { version = "2.0", features = ["tokio"] }

# Iroh dependencies (needed for discovery stream and error handling)
n0-future = "0.3.0"
n0-error = "0.1.0"

[[bin]]
name = "peer-2-peer"
path = "src/main.rs"

[[example]]
name = "unix_socket_example"
path = "examples/unix_socket_example.rs"

[[example]]
name = "log_forwarding"
path = "examples/log_forwarding.rs"

[[example]]
name = "test_local_socket"
path = "examples/test_local_socket.rs"
