[package]
name = "rppxml"
version = "0.1.0"
edition = "2021"
description = "A high-performance RPP (REAPER Project) file format parser using nom - generic parsing without REAPER-specific types"
license = "MIT"

[[example]]
name = "01_print_track_hierarchy"
path = "examples/01_print_track_hierarchy.rs"

[[example]]
name = "02_parse_markers_regions"
path = "examples/02_parse_markers_regions.rs"

[dependencies]
# Parser dependencies
nom = { workspace = true }

# Common workspace dependencies
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
