[package]
name = "rppxml"
version = "0.1.0"
edition = "2021"
description = "A high-performance RPP (REAPER Project) file format parser using nom - generic parsing without REAPER-specific types"
license = "MIT"


[dependencies]
# Parser dependencies
nom = { workspace = true }

# Common workspace dependencies
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
