[package]
name = "ui"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true }
lucide-dioxus = { version = "2.44", features = ["all-icons"] }
lumen-blocks = { git = "https://github.com/Leaf-Computer/lumen-blocks.git", tag = "v0.2.0" }

[features]
default = []
server = ["dioxus/server", "dioxus/fullstack"]

[lints]
workspace = true
