[package]
name = "desktop"
version.workspace = true
description = "FastTrackStudio Desktop Application"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri.workspace = true
tauri-plugin-opener.workspace = true
serde.workspace = true
serde_json.workspace = true
taurpc.workspace = true
specta.workspace = true
specta-typescript.workspace = true
tokio = { workspace = true, features = ["full"] }
chrono.workspace = true
anyhow.workspace = true
transport = { path = "../../../modules/daw/transport" }
project = { path = "../../../modules/daw/project" }
primitives = { path = "../../../modules/daw/primitives" }
axum = { version = "0.8.6", features = ["macros", "tokio", "http1"] }
portpicker = "0.1"
tauri-plugin-localhost = "2.0.0"
tower.workspace = true
mime_guess = "2.0"


# Additional dependencies for tarpc integration (already included via world-api)
