[package]
name = "fts-gain"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "FTS Gain - Simple gain/utility plugin with metering (CLAP/VST3 wrapper)"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []

[dependencies]
# Core gain plugin logic (DSP + UI)
fts-gain-core = { path = "../../../modules/plugins/gain", features = ["full"] }

# NIH-plug for plugin framework
fts-plugin-core = { path = "../../../modules/fts-plugin-core" }
nih_plug = { workspace = true }
nih_plug_dioxus = { workspace = true }

# Atomic types for meter sharing
atomic_float = { workspace = true }

# Async utilities for UI polling
futures-timer = "3.0"

# UI component library
lumen-blocks = { workspace = true }
